--- a/PlaneDemo/Base.lproj/Main.storyboard
+++ b/PlaneDemo/Base.lproj/Main.storyboard
@@ -21,18 +21,79 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oCV-U0-jGe">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Initializing AR Sesssion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2R-FO-BlB">
-                                <rect key="frame" x="16" y="48" width="282" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Initializing AR Sesssion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2R-FO-BlB">
+                                <rect key="frame" x="16" y="48" width="174.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.9152754353" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="9gA-Fd-QHH">
+                                <rect key="frame" x="0.0" y="414" width="419" height="214"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="rBM-Bu-Td4">
+                                        <rect key="frame" x="0.0" y="0.0" width="419" height="62"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Light Estimation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc4-sf-AUj">
+                                                <rect key="frame" x="0.0" y="0.0" width="419" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Hb-fl-dF4">
+                                                <rect key="frame" x="0.0" y="31" width="421" height="31"/>
+                                                <connections>
+                                                    <action selector="lightEstimationSwitchValueDidChange:" destination="CH4-bG-lEF" eventType="valueChanged" id="MAs-dv-u3y"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TsR-XN-51j">
+                                        <rect key="frame" x="0.0" y="78" width="419" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ambient Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExW-AC-Ywu">
+                                                <rect key="frame" x="0.0" y="0.0" width="419" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="9Ex-OA-3Ne">
+                                                <rect key="frame" x="-2" y="30" width="423" height="31"/>
+                                                <connections>
+                                                    <action selector="ambientIntensitySliderValueDidChange:" destination="CH4-bG-lEF" eventType="valueChanged" id="zOW-xP-fQT"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Ren-uv-yms">
+                                        <rect key="frame" x="0.0" y="154" width="419" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ambient Color Temperature:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xh1-o8-bsQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="419" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="RnS-U7-0gT">
+                                                <rect key="frame" x="-2" y="30" width="423" height="31"/>
+                                                <connections>
+                                                    <action selector="ambientColorTemperatureSliderValueDidChange:" destination="CH4-bG-lEF" eventType="valueChanged" id="yZG-Rg-ZcP"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alo-z9-ERD">
+                                <rect key="frame" x="16" y="20" width="34" height="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startButtonClicked:" destination="CH4-bG-lEF" eventType="touchUpInside" id="GBo-fS-NDs"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axb-zW-h4F">
-                                <rect key="frame" x="258" y="43" width="101" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="101" id="Bur-0E-jFB"/>
-                                </constraints>
-                                <state key="normal" title="Remove">
+                                <rect key="frame" x="320" y="43" width="39" height="30"/>
+                                <state key="normal" title="Reset">
                                     <color key="titleColor" red="0.28840373632745808" green="0.16899928491912541" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
@@ -45,19 +106,31 @@
                             <constraint firstItem="0tx-Ic-A8k" firstAttribute="trailing" secondItem="oCV-U0-jGe" secondAttribute="trailing" id="2jW-RL-T5y"/>
                             <constraint firstItem="X2R-FO-BlB" firstAttribute="leading" secondItem="0tx-Ic-A8k" secondAttribute="leading" constant="16" id="BPO-6L-OYg"/>
                             <constraint firstItem="axb-zW-h4F" firstAttribute="top" secondItem="0tx-Ic-A8k" secondAttribute="top" constant="23" id="BqI-Le-JS1"/>
+                            <constraint firstItem="alo-z9-ERD" firstAttribute="top" secondItem="0tx-Ic-A8k" secondAttribute="top" id="Cni-HB-Lzc"/>
                             <constraint firstItem="0tx-Ic-A8k" firstAttribute="bottom" secondItem="oCV-U0-jGe" secondAttribute="bottom" id="HQ6-bJ-bbb"/>
-                            <constraint firstItem="0tx-Ic-A8k" firstAttribute="trailing" secondItem="axb-zW-h4F" secondAttribute="trailing" constant="16" id="R6X-QC-BzF"/>
                             <constraint firstItem="X2R-FO-BlB" firstAttribute="top" secondItem="0tx-Ic-A8k" secondAttribute="top" constant="28" id="ZDy-pR-CXp"/>
+                            <constraint firstItem="alo-z9-ERD" firstAttribute="leading" secondItem="X2R-FO-BlB" secondAttribute="leading" id="a0s-DP-sTr"/>
                             <constraint firstItem="oCV-U0-jGe" firstAttribute="top" secondItem="TbV-zv-DL4" secondAttribute="top" id="g7e-ux-5PV"/>
                             <constraint firstItem="oCV-U0-jGe" firstAttribute="leading" secondItem="0tx-Ic-A8k" secondAttribute="leading" id="h84-Rp-wyg"/>
+                            <constraint firstItem="axb-zW-h4F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="X2R-FO-BlB" secondAttribute="trailing" constant="8" symbolic="YES" id="i5P-UD-WJO"/>
                             <constraint firstItem="X2R-FO-BlB" firstAttribute="top" secondItem="0tx-Ic-A8k" secondAttribute="top" constant="28" id="iLm-V1-gpM"/>
+                            <constraint firstItem="axb-zW-h4F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="alo-z9-ERD" secondAttribute="trailing" constant="8" symbolic="YES" id="oIn-np-sO8"/>
+                            <constraint firstItem="0tx-Ic-A8k" firstAttribute="trailing" secondItem="axb-zW-h4F" secondAttribute="trailing" constant="16" id="yNG-ui-cbc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0tx-Ic-A8k"/>
                     </view>
                     <connections>
+                        <outlet property="ambientColorTemperatureLabel" destination="xh1-o8-bsQ" id="gEJ-IA-oKq"/>
+                        <outlet property="ambientColorTemperatureSlider" destination="RnS-U7-0gT" id="066-8R-EuY"/>
+                        <outlet property="ambientIntensityLabel" destination="ExW-AC-Ywu" id="hGE-FW-Z6e"/>
+                        <outlet property="ambientIntensitySlider" destination="9Ex-OA-3Ne" id="dDf-iq-cRG"/>
                         <outlet property="infoLabel" destination="X2R-FO-BlB" id="Ub3-GG-wKT"/>
+                        <outlet property="lightEstimationStackView" destination="rBM-Bu-Td4" id="rqL-fo-pJb"/>
+                        <outlet property="lightEstimationSwitch" destination="0Hb-fl-dF4" id="Uhk-GD-q1J"/>
+                        <outlet property="mainStackView" destination="9gA-Fd-QHH" id="Wym-4X-cWC"/>
                         <outlet property="removeButton" destination="axb-zW-h4F" id="5xF-1A-C1K"/>
                         <outlet property="sceneView" destination="oCV-U0-jGe" id="VEt-iI-HKe"/>
+                        <outlet property="startButton" destination="alo-z9-ERD" id="I5Y-5s-a8q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mWR-C7-R5H" sceneMemberID="firstResponder"/>
